--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 
     <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+            <a class="navbar-brand" href="index.html">
+              <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50px">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" href="index.html">Home</a>
