--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </head>
 
     <body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
             <a class="navbar-brand" href="index.html">
               <img id="navbar_logo" src="images/main_images/logo_index.png" alt="Logo" style="height: 50px">
             </a>
@@ -31,29 +31,29 @@
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link nav-text" href="index.html">Home</a>
                 </li>
                     <!-- Dropdown -->
                 <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">Products</a>
+                  <a class="nav-link dropdown-toggle nav-text" href="#" id="navbardrop" data-toggle="dropdown">Products</a>
                   <div class="dropdown-menu">
-                    <a class="dropdown-item" href="pianos.html">Pianos</a>
-                    <a class="dropdown-item" href="guitars.html">Guitars</a>
-                    <a class="dropdown-item" href="basses.html">Basses</a>
-                    <a class="dropdown-item" href="drums_percussions.html">Drums/Percussion</a>
-                    <a class="dropdown-item" href="sound.html">Sound</a>
+                    <a class="dropdown-item nav-text" href="pianos.html">Pianos</a>
+                    <a class="dropdown-item nav-text" href="guitars.html">Guitars</a>
+                    <a class="dropdown-item nav-text" href="basses.html">Basses</a>
+                    <a class="dropdown-item nav-text" href="drums_percussions.html">Drums/Percussion</a>
+                    <a class="dropdown-item nav-text" href="sound.html">Sound</a>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="accessories.html">Accessories</a>
+                  <a class="nav-link nav-text" href="accessories.html">Accessories</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contact_us.html">Contact Us</a>
+                    <a class="nav-link nav-text" href="contact_us.html">Contact Us</a>
                 </li>     
               </ul>
             </div>  
-          </nav>
+        </nav>
     </body>
-
+    
 </html>
 
