Created the footer
Did this through creating a fluid container. Added place-holder text. Then created the different columns for the footer. Added the links and logos for the follow us page

--- a/index.html
+++ b/index.html
@@ -53,6 +53,54 @@
               </ul>
             </div>  
         </nav>
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+                <h2>Sub Heading</h2>
+                  <h3>Sub Heading</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
+                  <h3>Sub Heading</h3>
+                  <p>Suspendisse vitae ex non dui sollicitudin elementum. Nunc nec lacus eget purus iaculis porta. In hac habitasse platea dictumst. Nunc eget iaculis turpis. Curabitur elementum lacus vitae nunc vulputate, eu suscipit velit ullamcorper. Vestibulum in mauris pharetra, hendrerit erat in, molestie neque. In hac habitasse platea dictumst. Sed eu felis nec odio luctus pulvinar et vel erat. Etiam id lacus a quam pretium porta ut porttitor elit.</p>
+                  <h3>Sub Heading</h3>
+                  <p>Donec sodales leo in volutpat auctor. Sed non egestas metus. Aliquam mollis placerat lectus, a sollicitudin odio imperdiet elementum. Cras feugiat cursus finibus. In luctus lectus quis tellus ultrices, ut semper purus commodo. Nullam tincidunt, erat nec sodales condimentum, magna neque ultrices ipsum, id ullamcorper orci lacus in lectus. Vivamus ut neque nisi. Fusce vel tempor eros. Suspendisse tempor ornare convallis. Mauris tellus lorem, consequat id felis nec, suscipit porta arcu. Aliquam pretium lobortis dolor, at hendrerit ligula facilisis vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                  <h3>Sub Heading</h3>
+                  <p>Quisque sit amet egestas odio. Integer bibendum ornare elementum. Etiam placerat tempor lorem sed congue. Sed purus magna, rutrum id justo eu, facilisis ultrices elit. Sed fermentum nisl in ipsum posuere, quis sagittis neque sagittis. Sed volutpat lacus ut lectus vulputate, non efficitur purus efficitur. Curabitur eget nulla ac urna eleifend faucibus ac eget risus. Duis quis arcu eget elit aliquam cursus non in odio. Mauris vulputate dolor diam, quis vestibulum sem malesuada non. Etiam eget nisl ex. Nulla nec ultricies magna. Maecenas blandit elit ac diam lacinia semper. Curabitur scelerisque felis vitae mi iaculis bibendum. Integer lacinia pharetra consectetur. Duis interdum, felis vel maximus sodales, quam metus maximus turpis, sit amet aliquet mi ex eget est. Nullam accumsan odio justo, feugiat consequat magna scelerisque ac.</p>
+                  <h3>Sub Heading</h3>
+                  <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
+            </div>
+          </div>
+          <footer>
+            <div class="row">
+              <div class="col-sm-6 col-lg-4">
+                  <h5>Company Info</h5>
+                  <ul>
+                    <li><a href="index.html">Index</li></a>
+                    <li>About us</li>
+                    <li>Privacy</li>
+                    <li><a href="contact_us.html">Contact Us</li></a>
+                  </ul>
+              </div>
+              <div class="col-sm-6 col-lg-4">
+                  <h5>Products</h5>
+                  <ul>
+                    <li><a href="pianos.html">Pianos</li></a>
+                    <li><a href="guitars.html">Guitars</li></a>
+                    <li><a href="basses.html">Basses</li></a>
+                    <li><a href="drums_percussions.html">Drums and Percussion</li></a>
+                    <li><a href="sound.html">Sound Products</li></a>
+                  </ul>
+              </div>
+              <div class="col-sm-12 col-lg-4">
+                  <h5>Follow Us</h5>
+                  <a href="https://www.facebook.com/" target="_blank"><img src="images/main_images/followus_facebook_40x40.png" style="width:40px" alt="Facebook Icon"></a>
+                  <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
+                  <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
+                  <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
+                  <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+              </div>
+          </footer> 
+        </div>
     </body>
+
 </html>
 
