--- a/index.html
+++ b/index.html
@@ -69,38 +69,38 @@
                   <p>Integer id egestas tellus, vel sollicitudin nulla. Duis eu nibh imperdiet, convallis nulla ac, porttitor erat. Pellentesque convallis orci sit amet nisl congue, sed fringilla quam efficitur. Pellentesque turpis purus, fermentum sed viverra non, consectetur eu urna. Donec laoreet purus ex, a vestibulum turpis placerat a. Etiam interdum urna in enim dignissim accumsan. Suspendisse a velit rhoncus, pulvinar ex sit amet, ultrices odio.</p>
             </div>
           </div>
-          <footer>
-            <div class="row">
-              <div class="col-sm-6 col-lg-4">
-                  <h5>Company Info</h5>
-                  <ul>
-                    <li><a href="index.html">Index</li></a>
-                    <li>About us</li>
-                    <li>Privacy</li>
-                    <li><a href="contact_us.html">Contact Us</li></a>
-                  </ul>
-              </div>
-              <div class="col-sm-6 col-lg-4">
-                  <h5>Products</h5>
-                  <ul>
-                    <li><a href="pianos.html">Pianos</li></a>
-                    <li><a href="guitars.html">Guitars</li></a>
-                    <li><a href="basses.html">Basses</li></a>
-                    <li><a href="drums_percussions.html">Drums and Percussion</li></a>
-                    <li><a href="sound.html">Sound Products</li></a>
-                  </ul>
-              </div>
-              <div class="col-sm-12 col-lg-4">
-                  <h5>Follow Us</h5>
-                  <a href="https://www.facebook.com/" target="_blank"><img src="images/main_images/followus_facebook_40x40.png" style="width:40px" alt="Facebook Icon"></a>
-                  <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
-                  <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
-                  <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
-                  <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
-              </div>
-          </footer> 
         </div>
-    </body>
+        <div class="footer">
+          <div class="row">
+            <div class="col-sm-6 col-lg-4">
+                <h5>Company Info</h5>
+                <ul>
+                  <li><a href="index.html">Index</li></a>
+                  <li>About us</li>
+                  <li>Privacy</li>
+                  <li><a href="contact_us.html">Contact Us</li></a>
+                </ul>
+            </div>
+            <div class="col-sm-6 col-lg-4">
+                <h5>Products</h5>
+                <ul>
+                  <li><a href="pianos.html">Pianos</li></a>
+                  <li><a href="guitars.html">Guitars</li></a>
+                  <li><a href="basses.html">Basses</li></a>
+                  <li><a href="drums_percussions.html">Drums and Percussion</li></a>
+                  <li><a href="sound.html">Sound Products</li></a>
+                </ul>
+            </div>
+            <div class="col-sm-12 col-lg-4">
+                <h5>Follow Us</h5>
+                <a href="https://www.facebook.com/" target="_blank"><img src="images/main_images/followus_facebook_40x40.png" style="width:40px" alt="Facebook Icon"></a>
+                <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
+                <a href="https://www.instagram.com/" target="_blank"><img src="images/main_images/followus_instagram_40x40.png" style="width:40px" alt="Instagram Icon"></a>
+                <a href="https://www.twitter.com/" target="_blank"><img src="images/main_images/followus_twitter_40x40.png" style="width:40px" alt="Twitter Icon"></a>
+                <a href="https://www.youtube.com/" traget="_blank"><img src="images/main_images/followus_youtube_40x40.png" style="width:40px" alt="YouTube Icon"></a>
+            </div>
+        </footer> 
+      </body>
 
 </html>
 
