Updated Index Page
Updated Index Page to add the logo, change the footer color to the logo and to edit the different sizes it would appear on different devices

--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
         </div>
         <div class="footer">
           <div class="row">
-            <div class="col-sm-6 col-lg-4">
+            <div class="col-xs-12 com-sm-12 col-md-6 col-lg-3">
+              <a class="footer-brand" href="index.html">
+                <img id="footer_logo" src="images/main_images/logo_index.png" alt="Lopez MusicShop Icon">
+              </a>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Company Info</h5>
                 <ul>
                   <li><a href="index.html">Index</li></a>
@@ -81,7 +86,7 @@
                   <li><a href="contact_us.html">Contact Us</li></a>
                 </ul>
             </div>
-            <div class="col-sm-6 col-lg-4">
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                 <h5>Products</h5>
                 <ul>
                   <li><a href="pianos.html">Pianos</li></a>
@@ -91,7 +96,7 @@
                   <li><a href="sound.html">Sound Products</li></a>
                 </ul>
             </div>
-            <div class="col-sm-12 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
                 <h5>Follow Us</h5>
                 <a href="https://www.facebook.com/" target="_blank"><img src="images/main_images/followus_facebook_40x40.png" style="width:40px" alt="Facebook Icon"></a>
                 <a href="https://www.plus.google.com/" target="_blank"><img src="images/main_images/followus_googleplus_40x40.png" style="width:40px" alt="Google Plus Icon"></a>
