Updated Index Page
Updated Index Page by creating two sections which will surround the carousel

--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-                <h2>Sub Heading</h2>
+                <div id="centre_heading"><h1>Massive Sale</h1></div>
+            </div>
+          </div>
+        </div>
+        
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
                   <h3>Sub Heading</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
                   <h3>Sub Heading</h3>
