--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
                 <div class="carousel-item active">
                   <img src="images/index_page/guitar_amp.jpg" alt="Guitar Amp">
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                   <img src="images/index_page/chorus_pedal.png" alt="Chrous Pedal">
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                   <img src="images/index_page/telecaster.jpg" alt="Guitar">
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                   <img src="images/index_page/drums.jpg" alt="Drums">
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                   <img src="images/index_page/yamaha_upright_U1JPE.jpg" alt="Piano">
                 </div>
-                <div class="carousel-item active">
+                <div class="carousel-item">
                   <img src="images/index_page/fender_bass.jpg" alt="Bass">
                 </div>
               </div>
