Updated Index Page
Updated Index Page to now include the edited images for the carousel

--- a/index.html
+++ b/index.html
@@ -63,7 +63,6 @@
         
         <div class="carousel">
               <div id="demo" class="carousel slide" data-ride="carousel">
-
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
                   <li data-target="#demo" data-slide-to="0" class="active"></li>
@@ -74,22 +73,22 @@
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/index_page/guitar_amp.jpg" alt="Guitar Amp">
+                    <img src="images/image_processing_index_page/guitar_amp_final_version.png" alt="Guitar Amp">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/index_page/chorus_pedal.png" alt="Chrous Pedal">
+                    <img src="images/image_processing_index_page/chorus_pedal_final_version.png" alt="Chrous Pedal">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/index_page/telecaster.jpg" alt="Guitar">
+                    <img src="images/image_processing_index_page/telecaster_final_version.png" alt="Guitar">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/index_page/drums.jpg" alt="Drums">
+                    <img src="images/image_processing_index_page/drums_final_version.png" alt="Drums">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/index_page/yamaha_upright_U1JPE.jpg" alt="Piano">
+                    <img src="images/image_processing_index_page/yamaha_upright_U1JPE_final_version.png" alt="Piano">
                   </div>
                   <div class="carousel-item">
-                    <img src="images/index_page/fender_bass.jpg" alt="Bass">
+                    <img src="images/image_processing_index_page/fender_bass_final_version.png" alt="Bass">
                   </div>
                 </div>
               
