--- a/index.html
+++ b/index.html
@@ -74,21 +74,45 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="images/image_processing_index_page/guitar_amp_final_version.png" alt="Guitar Amp">
+                    <div class="carousel-caption">
+                      <h3>Vox Guitar Amp $576</h3>
+                      <p>Reduced by 60% from $1,440</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <img src="images/image_processing_index_page/chorus_pedal_final_version.png" alt="Chrous Pedal">
+                    <div class="carousel-caption">
+                      <h3>Boss Chorus Pedal $60.50</h3>
+                      <p>Reduced by 80% from $302.50</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <img src="images/image_processing_index_page/telecaster_final_version.png" alt="Guitar">
+                    <div class="carousel-caption">
+                      <h3>Fender Telecaster $2,000</h3>
+                      <p>Reduced by 50% from $4,000</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <img src="images/image_processing_index_page/drums_final_version.png" alt="Drums">
+                    <div class="carousel-caption">
+                      <h3>Roland Professional Drum Kit $6,000</h3>
+                      <p>Reduced by 40% from $10,000</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <img src="images/image_processing_index_page/yamaha_upright_U1JPE_final_version.png" alt="Piano">
+                    <div class="carousel-caption">
+                      <h3>Yahama Upright U1JPE $15,990</h3>
+                      <p>Reduced by 40% from $26,650</p>
+                    </div>
                   </div>
                   <div class="carousel-item">
                     <img src="images/image_processing_index_page/fender_bass_final_version.png" alt="Bass">
+                    <div class="carousel-caption">
+                      <h3>Fender Bass $478.50</h3>
+                      <p>Reduced by 45% from 870</p>
+                    </div>
                   </div>
                 </div>
               
