Updated Index Page
Updated Index Page to include some new center headings and quotes.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,16 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-                  <h3>Sub Heading</h3>
+              <div id="centre_heading"><h2>Welcome to our store. We Hope you like our products.</h2></div>
+              <div id="centre_quote"><p>"Make a joyful noise unto the Lord, all the earth: make a loud noise, and rejoice, and sing praise. Sing unto the Lord with the harp; with the harp, and the voice of a psalm. With trumpets and sound of cornet make a joyful noise before the Lord, the King." (Psalm 98:4-6)</p></div>  
+            </div>
+          </div>
+        </div>
+
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <div id="centre_heading"><h2>What we offer</h2></div>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque urna sem, fringilla sit amet dui quis, sodales sollicitudin ipsum. Nunc feugiat blandit neque, quis molestie quam imperdiet at. Pellentesque varius laoreet imperdiet. Donec suscipit accumsan dui, id imperdiet nulla eleifend vel. Nullam aliquam est in cursus faucibus. Etiam eu porttitor justo. Suspendisse iaculis imperdiet risus eget semper. Nulla facilisi.</p>
                   <h3>Sub Heading</h3>
                   <p>Suspendisse vitae ex non dui sollicitudin elementum. Nunc nec lacus eget purus iaculis porta. In hac habitasse platea dictumst. Nunc eget iaculis turpis. Curabitur elementum lacus vitae nunc vulputate, eu suscipit velit ullamcorper. Vestibulum in mauris pharetra, hendrerit erat in, molestie neque. In hac habitasse platea dictumst. Sed eu felis nec odio luctus pulvinar et vel erat. Etiam id lacus a quam pretium porta ut porttitor elit.</p>
