Updated Index Page
Updated Index Page to have all the cards required for the different links to our product ranges.

--- a/index.html
+++ b/index.html
@@ -148,39 +148,74 @@
 
         <div class="container-fluid">
           <div class="row">
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card mb-4">
-                      <img class="card-img-top" src="images/index_page/guitar.jpg" alt="card img top">
+                      <img class="card-img-top" src="images/image_processing_index_page/piano.jpg" alt="Piano Page">
                       <div class="card-body">
-                          <h2>Card One</h2>
-                          <h3>Subtitle</h3>
-                          <p>Some quick example text to build on the card title and make up the bulk of the card's content. </p>
-                          <a href="#" class="btn btn-primary">Go Somewhere</a>
+                          <h2>Pianos</h2>
+                          <h3>Grands, Uprights and Keyboards</h3>
+                          <p>Explore our range of Steinways, Bostons, Yahamas, and Casios </p>
+                          <a href="pianos.html" class="btn btn-primary">Expore our range</a>
                       </div>
                   </div>
               </div>
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card mb-4">
-                      <img class="card-img-top" src="images/index_page/guitar.jpg" alt="card img top">
+                      <img class="card-img-top" src="images/image_processing_index_page/guitar.jpg" alt="Guitar Page">
                       <div class="card-body">
-                          <h2>Card Two</h2>
-                          <h3>Subtitle</h3>
-                          <p>Some quick example text to build on the card title and make up the bulk of the card's content. </p>
-                          <a href="#" class="btn btn-primary">Go Somewhere</a>
+                          <h2>Guitars</h2>
+                          <h3>Eletrics and Accoustics</h3>
+                          <p>Explore our range of Epiphone, Aria, Fender, and Dangelico </p>
+                          <a href="guitars.html" class="btn btn-primary">Expore our range</a>
                       </div>
                   </div>
               </div>
-              <div class="col-12 col-md-4">
+              <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
                   <div class="card mb-4">
-                      <img class="card-img-top" src="images/index_page/guitar.jpg" alt="card img top">
+                      <img class="card-img-top" src="images/index_page/double_bass.jpg" alt="Bass Page">
                       <div class="card-body">
-                          <h2>Card Three</h2>
-                          <h3>Subtitle</h3>
-                          <p>Some quick example text to build on the card title and make up the bulk of the card's content. </p>
-                          <a href="#" class="btn btn-primary">Go Somewhere</a>
+                          <h2>Basses</h2>
+                          <h3>Doubles Basses and Bass Guitars</h3>
+                          <p>Explore our range of Ibanez, Fender, Eastman, Yahama </p>
+                          <a href="basses.html" class="btn btn-primary">Expore our range</a>
                       </div>
                   </div>
               </div>
+          </div>
+          <div class="row">
+            <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="card mb-4">
+                    <img class="card-img-top" src="images/index_page/drums_2.jpg" alt="Drum/Percussion Page">
+                    <div class="card-body">
+                        <h2>Drums/Percussion</h2>
+                        <h3>Electric and Accoustic Kits</h3>
+                        <p>Explore our range of Pearl, Ludwig, Roland, Tama </p>
+                        <a href="drums_percussions.html" class="btn btn-primary">Expore our range</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="card mb-4">
+                    <img class="card-img-top" src="images/index_page/speakers.jpg" alt="Sound Page">
+                    <div class="card-body">
+                        <h2>Sound Equipment</h2>
+                        <h3>Speakers, Mixers, Microphones</h3>
+                        <p>Explore our range of Sennheiser, Yamaha, Mackie Thump, Rode, AKG </p>
+                        <a href="sound.html" class="btn btn-primary">Expore our range</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-xs-12 col-sm-6 col-md-4 col-lg-4">
+                <div class="card mb-4">
+                    <img class="card-img-top" src="images/index_page/cables.jpg" alt="Accessories Page">
+                    <div class="card-body">
+                        <h2>Accessories</h2>
+                        <h3>Cables, Mic Stands, Picks, Bows, etc.</h3>
+                        <p>Explore our vast range of different accessoires </p>
+                        <a href="accessories.html" class="btn btn-primary">Expore our range</a>
+                    </div>
+                </div>
+            </div>
           </div>
         </div>
         <div class="footer">
