Updated Index Page
Updated Index Page to include a top button using JavaScript part 1

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@
             </div>
           </div>
         </div>
+
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
+        
         <div class="footer">
           <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3">
