--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="card-body">
                         <h2>Sound Equipment</h2>
                         <h3>Speakers, Mixers, Microphones</h3>
-                        <p>Explore our range of Sennheiser, Yamaha, Mackie Thump, Rode, AKG </p>
+                        <p>Explore our range of Yamaha and Mackie Thump</p>
                         <a href="sound.html" class="btn btn-primary">Expore our range</a>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                     <img class="card-img-top" src="images/index_page/cables.jpg" alt="Accessories Page">
                     <div class="card-body">
                         <h2>Accessories</h2>
-                        <h3>Cables, Mic Stands, Picks, Bows, etc.</h3>
+                        <h3>Cables, Mics, Mic Stands, Music Stands</h3>
                         <p>Explore our vast range of different accessoires </p>
                         <a href="accessories.html" class="btn btn-primary">Expore our range</a>
                     </div>
