--- a/basses.html
+++ b/basses.html
@@ -329,6 +329,7 @@
                       </tr>
                   </table>
               </div>
+          </div>
         </div>
 
         <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
